--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
     - name: install dependencies
       run: pip install pytest
     - name: run unit tests
-      run pytest
+      run: pytest
